fixed navbar dropdown overflow

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,15 +1,11 @@
-.body
-{
-  position: relative;
-}
 .nav-link-text:hover {
   border-bottom: 2px solid #011204;
 }
 .center-search {
   margin: 0 auto;
   text-align: center;
-  min-width: 600px;
-  max-width: 1000px;
+  min-width: 900px;
+  max-width: 1500px;
 }
 
 .search-input {
